# EHouse_Model

./: .gitignore  AGENTS.md  README.md  project.json  pyproject.toml  run_face_extractor.py  run_global_builder.py  run_gui.py  run_preprocess.py  run_preprocess_gui.py  run_project_wizard.py  run_roof_extractor.py
src/ehouse_model/: __init__.py  base_processing.py  centerline_cleanup.py  correction_tools.py  domain.py  dxf_preprocessor.py  dxf_reader.py  face_extractor.py  face_model.py  face_topology.py  global_model.py  global_model_types.py  global_stitching.py  mapping.py  part_assembly.py  part_builders.py  part_geometry.py  project.py  project_model.py  roof_processing.py  side_wall_plan_processing.py  staad_import.py
src/ehouse_model/exporters/: __init__.py  csv_export.py  staad_export.py
src/ehouse_model/gui/: __init__.py  app.py  main_window.py  preprocess_app.py  preprocess_window.py  project_wizard.py  project_wizard_app.py
tests/: test_base_processing.py  test_centerline_cleanup.py  test_csv_export.py  test_dxf_preprocessor.py  test_face_extractor.py  test_global_model.py  test_global_stitching.py  test_gui_main_window.py  test_mapping.py  test_part_geometry_workflow.py  test_project.py  test_project_model.py  test_project_parts.py  test_project_wizard_gui.py  test_roof_processing.py  test_side_wall_plan_processing.py  test_staad_export.py
