[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ehouse-model"
version = "0.1.0"
description = "Geometry extraction helpers for E-House steel frame modeling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ezdxf>=1.4",
    "PySide6>=6.8,<6.9",
    "PyYAML>=6.0",
    "shapely>=2.1",
]

[project.scripts]
ehouse-extract-face = "ehouse_model.face_extractor:main"
ehouse-extract-roof = "ehouse_model.roof_processing:main"
ehouse-gui = "ehouse_model.gui.app:main"
ehouse-project-wizard = "ehouse_model.gui.project_wizard_app:main"
ehouse-preprocess-dxf = "ehouse_model.dxf_preprocessor:main"
ehouse-preprocess-gui = "ehouse_model.gui.preprocess_app:main"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
pythonpath = ["src"]
testpaths = ["tests"]
